fix clipping issue and tweak some stuff.

--- a/dev/scss/_main.scss
+++ b/dev/scss/_main.scss
@@ -174,8 +174,9 @@ footer.navigation {
 
 #testimonials {
   .carousel-item {
-    min-height: 350px;
-    padding-top: 70px;
+    min-height: 320px;
+    padding-top: 10px;
+    padding-bottom: 42px;
     position: relative;
 
     .carousel-caption {
@@ -184,12 +185,12 @@ footer.navigation {
       margin: auto;
       font-family: eurostile, sans-serif;
       font-weight: 300;
-      font-size: 25px;
-      line-height: 28px;
+      font-size: 20px;
+      line-height: 21px;
 
       h5 {
         font-weight: 600;
-        font-size: 25px;
+        font-size: 20px;
       }
     }
   }
@@ -213,7 +214,7 @@ footer.navigation {
   @include media-breakpoint-down(sm) {
     .carousel-control-next, .carousel-control-prev {
       align-items: flex-end;
-      margin-bottom: 15px;
+      margin-bottom: 26px;
     }
   }
 
@@ -223,6 +224,8 @@ footer.navigation {
     }
 
     .carousel-item {
+      min-height: 350px;
+      padding-top: 70px;
       padding-left: 100px;
       padding-right: 100px;
     }
@@ -239,5 +242,20 @@ footer.navigation {
       height: 120px;
       top: -60px;
     }
+
+    .carousel-caption {
+      font-size: 25px;
+      line-height: 28px;
+
+      h5 {
+        font-size: 25px;
+      }
+    }
   }
+}
+
+.testimonials-container {
+  overflow: hidden;
+  padding-top: 60px;
+  margin-top: -60px;
 }
